--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2>Get In Touch</h2>
           <h3>If you are into coding, problem solving or web development.</h3>
           <p>We can discuss on certains problems and help each other grow.</p>
-          <a class="btn" href="sachin.bhatt0101@gmail.com">CONTACT ME</a>
+          <a class="btn" href="mailto: sachin.bhatt0101@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
